[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "streamlit-autorefresh>=1.0.1",
]
